--- a/Oja/MainWindow.xaml
+++ b/Oja/MainWindow.xaml
@@ -5,8 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Oja"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Oja"
+        MinWidth="480" MinHeight="240">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Height" Value="24"/>
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Margin" Value="12"/>
+        </Style>
+        <Style TargetType="Image">
+            <Setter Property="Margin" Value="12"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Center">
+            <Button Name="OpenImageButtun" 
+                Content="打开图片"
+                Click="OpenImageButtun_Click"/>
+            <Button Name="SaveZipButtun" 
+                    Content="保存压缩文件"
+                    IsEnabled="False"
+                    Click="SaveZipButtun_Click"/>
+        </StackPanel>
+        <Image Name="OriginImage"
+               Grid.Row="1" Grid.Column="0"/>
+        <StackPanel Grid.Row="0" Grid.Column="1" 
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Center">
+            <Button Name="OpenZipButton"
+                    Content="打开压缩文件"
+                    Click="OpenZipButton_Click"/>
+            <Button Name="SaveImageButtun"
+                    Content="保存图片"
+                    IsEnabled="False"
+                    Click="SaveImageButtun_Click"/>
+        </StackPanel>
+        <Image Name="ZippedImage" 
+               Grid.Row="1" Grid.Column="1"/>
     </Grid>
 </Window>
